--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.8",
+    "eruda": "^3.2.1",
     "formik": "^2.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,6 +19,9 @@
     "react-mkx-toolkit": "^1.5.6",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "slate": "^0.103.0",
+    "slate-history": "^0.100.0",
+    "slate-react": "^0.107.1",
     "yup": "^1.4.0"
   },
   "scripts": {
