--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "eruda": "^3.2.1",
     "formik": "^2.4.5",
+    "is-hotkey": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-mkx-storage": "^1.1.2",
